New release * Changed default font to Lato * Removed text-shadow

--- a/wp-content/themes/Monty/dev/sass/_monty.scss
+++ b/wp-content/themes/Monty/dev/sass/_monty.scss
@@ -1,7 +1,6 @@
 body {
-	text-shadow: 0 1px 1px rgba( 50, 50, 50, 0.3 );
 	background-color: #233140;
-	font-family: Calibri,Helvetica,Arial,sans-serif;
+	font-family: 'Lato', sans-serif;
 }
 p {
 	font-size: 20px;
@@ -314,7 +313,7 @@ section {
 
 	h2 {
 		margin: 30px 0;
-		font-size: 34px;
+		font-size: 36px;
 	}
 
 	.container {
